--- a/src/components/ResCard.css
+++ b/src/components/ResCard.css
@@ -2,7 +2,7 @@
 .card {
 
     display: inline-block;
-    margin: auto;
+    margin: 40px 60px;
     width: 180px;
     height: 168px;
     border-radius: 10px;
