--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -1,8 +1,9 @@
 .btn {
+
     background-color: #c4c9c1;
     height: 33px;
     border-radius: 24px;
-    paddin: 15px 5px;
+    padding-bottom: 30px;
     gap: 10px;
     font-weight: 400;
     font-size: 14px;
