--- a/src/components/Bestillingsliste.css
+++ b/src/components/Bestillingsliste.css
@@ -1,8 +1,12 @@
-.Bestilling {
+.bestilling {
     display: inline-block;
     width: 673px;
     height: 372px;
     color: #261f18;
+}
+
+.Bestilling img {
+    margin-right: 10px;
 }
 
 .bestilcard {
