--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -7,21 +7,18 @@
   .navbar {
     display: block;
     height: 77px;
-    align-content: center;
-    padding-top: 0.8%;
     padding-left: 12.5%;
     background-color: #362b24;
     font-size: 14px;
     font-weight: 700;
     line-height: 20.75px;
     color: #fff;
-    
+    padding-bottom: 10px;    
   }
   
   .valg {
     display: inline;
-    padding-left: 5%;
-    gap: 27px;
+    padding: 2%;
     font-weight: 700;
     font-size: 14px;
     line-height: 20.75px;
@@ -50,7 +47,39 @@
   .search img {
     margin-left: 7%;
     width: 12px;
-    height: 12px; 
-    
+    height: 12px;   
   }
   
+
+  .profile {
+    display: inline-block; 
+    height: 21px;
+    margin-left: 5%;
+    margin-top: auto;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20.75px;
+  }
+  
+  .user {
+    display:inline;
+    padding: 5px;
+  }
+  
+  .land {
+    display: inline;
+    margin-left: 0px
+  }
+
+  .user img {
+    display: inline-block;
+    height: 19px;
+    width: 19px;
+  }
+
+  .land img {
+    display: inline-block;
+    margin-bottom: 5px;
+    height: 12px;
+    width: 12px;
+  }
