--- a/src/components/Bestillingsliste.css
+++ b/src/components/Bestillingsliste.css
@@ -66,5 +66,14 @@ span {
 }
 
 .Bestilling img {
-    margin: 3px;
+    margin: 10px;
 }
+
+h2 {
+  display: inline;
+  font-size: 16px;
+  font-weight: 500;
+  padding: 5px;
+  margin-right: 70px;
+}
+
