--- a/src/components/KampCard.css
+++ b/src/components/KampCard.css
@@ -10,9 +10,9 @@
 
 .tid {
     height: 22px;
-    width: 184px;
+    width: fit-content;
     border-radius: 2px;
-    padding: 3px 6px 3px 6spx; 
+    padding: 3px 6px 3px 6px; 
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 12px;
     font-weight: 400;
@@ -21,6 +21,6 @@
 
 .kamp-titel {
     color: #fff;
-    margin-top: 180px;
+    margin-top: 60%;
     margin-bottom: 5px;
 }
