--- a/src/components/Favoritprodukter.css
+++ b/src/components/Favoritprodukter.css
@@ -12,6 +12,7 @@
 .favoritecard {
     width: 350px;
     height: 310px;
+    margin-top: 10px;
     background-color: #f5f5f5;
     border-radius: 10px;
 }
