--- a/src/components/Bestillingsliste.css
+++ b/src/components/Bestillingsliste.css
@@ -2,12 +2,20 @@
     width: 673px;
     height: 372px;
     color: #261f18;
-}
+  }
+  
+.bestilling img {
+      margin: 10px;
+  }
+  
+.bestilling h2 {
+    display: inline;
+    font-size: 16px;
+    font-weight: 500;
+    padding: 5px;
+  }
 
-.Bestilling img {
-    margin-right: 10px;
-}
-
+  
 .bestilcard {
     display: block;
     background: #F5F5F5; 
@@ -18,28 +26,31 @@
     color: #261f18;
   }
 
-  .total {
+.total {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 12px;
     font-weight: 400;
     margin-bottom: 10px;
   }
   
-  .total-produkt , .total-værdi {
+.total-produkt , .total-værdi {
     background-color: #f1ece6;
     border-radius: 2px;
     padding: 3px;
   }
 
-  .total-produkt {
-    margin-right: 439px;
+.total-værdi {
+    float: right;
   }
 
 .produkt {
     height: 58px;
-    background-color: #fff;
     margin-top: 5px;
     margin-bottom: 5px;
+}
+
+.lys {
+  background-color: #fff;
 }
 
 .navn {
@@ -57,9 +68,10 @@
 
 .produkt img , .produkt-dark img{
     display: inline;
-    height: 58px;
-    width: auto;
-    padding-left: 20px
+    max-height: 50px;
+    max-width: 50px;
+    padding-left: 20px;
+    align-items: center;
 }
 
 .bestilling a {
@@ -68,14 +80,3 @@
     padding-top: 15px;
 }
 
-.bestilling img {
-    margin: 10px;
-}
-
-.bestilling h2 {
-  display: inline;
-  font-size: 16px;
-  font-weight: 500;
-  padding: 5px;
-  margin-right: 70px;
-}
