--- a/src/components/Senesteordre.css
+++ b/src/components/Senesteordre.css
@@ -7,19 +7,20 @@
 .seneste {
     display: block;
     background: #F5F5F5; 
+    margin-top: 10px;
     border-radius: 10px;
     height: 310px;
     padding: 15px 7px 3px 7px;
     color: #261f18;
   }
 
-  ul {
+  .seneste ul {
     list-style:none;
     padding: 0;
     margin: 0;
   }
   
-  li {
+  .seneste li {
     margin: 5px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 14px;
@@ -33,7 +34,6 @@
 .ordre-historie a {
     color: #261f18;
     float: right;
-    padding-top: 15px;
   }
 
 .white {
