--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -2,6 +2,7 @@
     display: inline-block;
     width: auto;
     height: auto;
+    margin-top: 7px;
   }
   
   .navbar {
@@ -12,8 +13,7 @@
     font-size: 14px;
     font-weight: 700;
     line-height: 20.75px;
-    color: #fff;
-    padding-bottom: 10px;    
+    color: #fff;  
   }
   
   .valg {
@@ -68,7 +68,7 @@
   
   .land {
     display: inline;
-    margin-left: 0px
+    margin-left: 5px
   }
 
   .user img {
